fix(board)：修复教程提示生命周期并完善单人补位。